--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "axios": "^1.6.2",
+    "icons": "^1.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
+    "react-redux": "^9.0.2",
+    "react-router-dom": "^6.18.0",
+    "redux": "^5.0.0",
+    "styled-components": "^6.1.1",
+    "swiper": "^11.0.5",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
