--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
     "axios": "^1.6.2",
     "icons": "^1.0.0",
     "leaflet": "^1.9.4",
@@ -26,6 +28,7 @@
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.18.0",
     "redux": "^5.0.0",
+    "stripe": "^14.10.0",
     "styled-components": "^6.1.1",
     "swiper": "^11.0.5",
     "tailwind": "^4.0.0"
